contrast error fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -94,6 +94,7 @@ footer{
 
 }
 #lastModified{
-color:#B31B68;
+color:#5b1036;
+font-weight: bold;
 }
 
